--- a/inst/exercises/covid/COVID_A.Rmd
+++ b/inst/exercises/covid/COVID_A.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Modelling the COVID-19 pandemic"
 subtitle: "Exercises Accompanying the Course Reaction Transport Modelling in the Hydrosphere"
-author: "Karline Soetaert and Lubos Polerecky, Utrecht University"
+author: "Lubos Polerecky and Karline Soetaert, Utrecht University"
 date: "March 2021"
 output:
   pdf_document:
