--- a/inst/exercises/epidemiology/covid/covid_Q.Rmd
+++ b/inst/exercises/epidemiology/covid/covid_Q.Rmd
@@ -47,10 +47,10 @@ These equations imply that the rate constants $g$ and $m$ represent the *fractio
 
 ## 1. Implement the simple S.I.R. model in R
 
-The above model is the simplest S.I.R. model possible. It is not very realistic, and not very handy to be used as a decision-making tool. Nevertheless, you should start with implementing this model in *R* (R core team 2020) and solve it with the deSolve package (Soetaert et al., 2010).
+The above model is the simplest S.I.R. model possible. It is not very realistic, and not very handy to be used as a decision-making tool. Nevertheless, you should start with implementing this model in *R* and solve it with the *deSolve* package.
 Use the template R markdown file *RTM_0D.Rmd* to implement this model.\footnote{You can obtain this file from Rstudio: File $\rightarrow$ new File $\rightarrow$ Rmarkdown $\rightarrow$ from template $\rightarrow$ RTM\_0D. Save this file under a different name. Do not forget to change the heading of this file.}
 
-* Run the model for 365 days, using the following parameters (not patterned to the covid pandemic!):
+* Run the model for 365 days, using the following parameters (not patterned to the COVID-19 pandemic!):
 
 | Name      | Value      | Description         | Unit              |
 | --------- | ---------- | ------------------- | ----------------- |
@@ -59,9 +59,9 @@ Use the template R markdown file *RTM_0D.Rmd* to implement this model.\footnote{
 | m         | 0.007      | mortality parameter | $d^{-1}$          |
 
 
-* Calculate the total population size in the model. This will allow you to keep track of the number of people that died from the disease. Think of an alternative way to keep track of these people. In this model we will ignore birth and mortality due to non-covid causes.
+* Calculate the total population size in the model. This will allow you to keep track of the number of people that died from the disease. Think of an alternative way to keep track of these people. In this model we will ignore birth and mortality due to non-COVID causes.
 
-* Calculate the *average duration of the infectious period*, $\tau$, i.e., the average number of days that an infected person stays infected. Tip: you can deduce this number by considering the meaning of the parameters $g$ and $m$.\footnote{Alternatively, you can derive it by solving the differential equation for $I$ given above assuming that the infection rate is zero ($b=0$), and starting with a specific number of infected individuals initially (e.g., $I_{ini}=1000$). You will see how this is done rigorously in an appendix to the answers.}
+* Calculate the *average duration of the infectious period*, $\tau$, i.e., the average number of days that an infected person stays infected. Tip: you can deduce this number by considering the meaning of the parameters $g$ and $m$.\footnote{Alternatively, you can derive it by solving the differential equation for $I$ given above assuming that the infection rate is zero ($b=0$), and starting with a specific number of infected individuals initially (e.g., $I_{ini}=1000$). You will see how this is done rigorously in an Appendix to the answers.}
 
 * An often used number to designate the phase of the pandemic is the "Reproduction Number", *RN*. This is the number of people that one infected individual, on average, infects. When this number drops below 1, the number of infections will decrease (a good sign); when $RN > 1$, the number of infected individuals will increase --- exponentially --- in time (alarming).  Add the reproduction number as an ordinary output variable to the model. You will need to derive the equation to estimate this number. Tip: use the rate expression for the number of infections per day to derive *RN*. You will also need to use the value of the parameter $\tau$ derived in the previous step.
 
@@ -82,12 +82,12 @@ Unfortunately, recovered people can lose their immunity.
 
 ## 3. Pressure on hospitals
 
-One of the concerns at the start of the Covid-pandemic was that our hospitals would be swamped with Covid patients that cannot be treated anymore. A horror scenario is that patients need to wait in an ambulance (as in the UK), or be treated in corridors of the hospitals (as in Italy). 
-Also, when hospitals have too many Covid patients, the treatment of non-Covid patients will be jeopardised. 
+One of the concerns at the start of the COVID pandemic was that our hospitals would be swamped with COVID patients that cannot be treated anymore. A horror scenario is that patients need to wait in an ambulance (as in the UK), or be treated in corridors of the hospitals (as in Italy). 
+Also, when hospitals have too many COVID patients, the treatment of non-COVID patients will be jeopardized. 
 
 The number of hospital beds is 60,000 in Belgium and 55,000 in the Netherlands, so these numbers are to be kept in mind when taking measures to keep the pandemic manageable.
 
-* Update your model to include the number of patients *hospitalised* due to Covid-related complications.
+* Update your model to include the number of patients *hospitalized* due to COVID-related complications.
 * Find suitable rate expressions for the rates in and out of the new compartment. 
 
 ## 4. Updated model
@@ -98,13 +98,13 @@ Based on tasks 2 and 3, you should now arrive at an updated version of your mode
 
 As mentioned earlier, large part of modelling involves figuring out realistic values for the model parameters. You will do this now based on the information we received from the ITG expert. These are her quotes:
 
-* Q1. "People that are infected by Covid-19 stay infectious on average for 10 days."
+* Q1. "People that are infected by COVID-19 stay infectious on average for 10 days."
 
 * Q2. "In Belgium and the Netherlands, the reproduction number *RN* at the start of the pandemic was between 2 and 4. A good guess is to take *RN* initially equal to 2.5." 
 
    - You cannot use this number directly in your model. However, based on the analysis you made earlier in this exercise (Task 1), you can use it to estimate the infection parameter *b*.
 
-* Q3. "The immunity of the recovered people is only temporary. It is assumed that people are only immune for about 6 months after recovery from the disease". 
+* Q3. "The immunity of the recovered people is only temporary. It is assumed that people are only immune for about 6 months after recovery from the disease." 
 
   - Use the same approach as in Task 1 (where you figured out how the average duration of infection, $\tau$, is related to the rate constants $g$ and $m$) to estimate a realistic value for the rate constant describing immunity loss.
 
@@ -119,7 +119,7 @@ As mentioned earlier, large part of modelling involves figuring out realistic va
 * Q6. "Of all people that become infected, about 1% to 3% die." 
 
   - This mortality rate is the *average* mortality experienced by *all* infected individuals, i.e., the "free-roaming" and hospitalised individuals. It is not possible to use this number directly. However, 
-  - you can assume that the total mortality for the free-roaming infected individuals is low, i.e., 0.1%. 
+  - you can assume that the total mortality for the free-roaming infected individuals is low, e.g., 0.1%. 
   - Create an output variable that estimates the mean mortality of the entire infected population (hospitalised and "free-roaming") to check that this mean indeed fluctuates between 1% and 3%. 
 
 ## 6. Implementation in R
@@ -140,5 +140,5 @@ Compare all runs.
 * What are the implications of "social distancing" measures on the number of hospitalized and deceased people?
 * What are the implications of the *combined* "social distancing with vaccination" measures, and of the "vaccination" alone (i.e., without "social distancing")? 
 * Explore different levels of social distancing combined with different vaccination rates. What vaccination rates are needed to achieve "meaningful" results while keeping the society as "free" as possible (i.e., no social distancing measures)?
-* Discuss among each other how the model helps you understand the reaction of the different societies around the world to the COVID-19 pandemic over the past year.
+* Discuss among each other how the model helps you understand the reaction of the different societies around the world to the COVID-19 pandemic over the past two years.
 
