--- a/inst/exercises/epidemiology/covid/covid_A.Rmd
+++ b/inst/exercises/epidemiology/covid/covid_A.Rmd
@@ -38,8 +38,8 @@ parms.SIR   <- c(
 )
 
 # model function
-SIR <- function(t, state, parameters) {
-  with (as.list(c(state, parameters)), {
+SIR <- function(t, state, parms) {
+  with (as.list(c(state, parms)), {
 
     # rate expressions
     Infection  <- b*S*I
@@ -125,7 +125,7 @@ The quotes from the expert are used as follows:
 require(deSolve)
 
 # model parameters for Belgian case
-parms      <- c(
+pars      <- c(
   tau  = 10,         # [d], duration of the infectious period, free-roaming individuals
   tauH = 10,         # [d], duration of the infectious period, hospitalized individuals
   b = 2.5/11.5e6/10, # [1/ind/d], infection parameter, assuming RN=2.5, b=RN/Sini/d
@@ -139,8 +139,8 @@ parms      <- c(
 )
 
 # the model function
-Corona <- function(t, state, parameters) {
-  with (as.list(c(state, parameters)), {
+Corona <- function(t, state, parms) {
+  with (as.list(c(state, parms)), {
 
     # rate expressions - units of [ind/day]
     Infection           <- b*S*I
@@ -178,27 +178,27 @@ The model is applied to the Belgian case:
 require(deSolve)
 
 # initial conditions, units of number of individuals (in Belgium)
-state      <- c(S = 11500000, I = 1000, R = 0, H = 0, Deceased = 0)
+state.ini  <- c(S = 11500000, I = 1000, R = 0, H = 0, Deceased = 0)
 
 time.seq   <- seq(from = 0, to = 365, by = 1)
 
 # default run, business as usual
-out <- ode(y = state, times = time.seq, func = Corona, parms = parms)
+out <- ode(y = state.ini, times = time.seq, func = Corona, parms = pars)
 
 # run with reduced infection rate to 60% (social distancing)
-parms2 <- parms
-parms2["b"] <- parms2["b"]*0.6
-out2 <- ode(y = state, times = time.seq, func = Corona, parms = parms2)
+pars2 <- pars
+pars2["b"] <- pars2["b"]*0.6
+out2 <- ode(y = state.ini, times = time.seq, func = Corona, parms = pars2)
 
 # add vaccination
-parms3 <- parms2
-parms3["v"] <- 0.005
-out3 <- ode(y = state, times = time.seq, func = Corona, parms = parms3)
+pars3 <- pars2
+pars3["v"] <- 0.005
+out3 <- ode(y = state.ini, times = time.seq, func = Corona, parms = pars3)
 
 # vaccination but without social distancing
-parms4 <- parms
-parms4["v"] <- 0.005
-out4 <- ode(y = state, times = time.seq, func = Corona, parms = parms4)
+pars4 <- pars
+pars4["v"] <- 0.005
+out4 <- ode(y = state.ini, times = time.seq, func = Corona, parms = pars4)
 
 par(oma = c(0,2,0,0))
 plot(out, out2, out3, out4, xlab = "time", lwd = 2, lty = 1, las = 1, mfrow=c(3,3),
